--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @perry:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=${secrets.TOKEN}
