Update repository URL in package.json to reflect new ownership

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/perry/lego-ui.git"
+    "url": "https://github.com/ilcherry/lego-ui"
   },
   "homepage": "https://github.com/perry/lego-ui#readme",
   "bugs": {
