--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@perry:registry=https://npm.pkg.github.com
+@ilcherry:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=${secrets.TOKEN}
