更新 GitHub Pages 部署动作，使用 JamesIves/github-pages-deploy-action@v4，并添加清理和分支配置

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -163,8 +163,9 @@ jobs:
         run: npm run docs:build
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: JamesIves/github-pages-deploy-action@v4
         if: github.ref == 'refs/heads/main'
         with:
-          github_token: ${{ secrets.TOKEN }}
-          publish_dir: ./docs/dist
+          folder: ./docs/dist
+          clean: true
+          branch: main
